--- a/Oasis/Base.lproj/Main.storyboard
+++ b/Oasis/Base.lproj/Main.storyboard
@@ -280,42 +280,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="CuH-E4-gyI">
-                                <rect key="frame" x="16" y="60" width="382" height="737"/>
+                                <rect key="frame" x="5" y="60" width="404" height="737"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Shop" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvp-oN-EMI">
-                                        <rect key="frame" x="120" y="0.0" width="142" height="38.5"/>
+                                        <rect key="frame" x="131" y="0.0" width="142" height="38.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="246" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="OFN-M5-QsJ">
-                                        <rect key="frame" x="16" y="58.5" width="350" height="678.5"/>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="246" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="OFN-M5-QsJ">
+                                        <rect key="frame" x="16" y="58.5" width="372" height="678.5"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LFh-Ry-aZ7">
-                                            <size key="itemSize" width="150" height="200"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="5" id="LFh-Ry-aZ7">
+                                            <size key="itemSize" width="155" height="200"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <inset key="sectionInset" minX="8" minY="8" maxX="8" maxY="8"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ShopCell" id="HLn-Sn-diw" customClass="ShopCell" customModule="Oasis" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
+                                                <rect key="frame" x="8" y="8" width="155" height="200"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="X2Q-KO-Thy">
-                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="155" height="200"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qXe-kf-4dH">
-                                                            <rect key="frame" x="0.0" y="5" width="150" height="195"/>
+                                                            <rect key="frame" x="0.0" y="5" width="155" height="195"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="plantName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s0V-1Q-1W1">
-                                                                    <rect key="frame" x="31.5" y="0.0" width="87" height="20.5"/>
+                                                                    <rect key="frame" x="34" y="0.0" width="87" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="XiG-cd-Hen">
-                                                                    <rect key="frame" x="0.0" y="30.5" width="150" height="164.5"/>
+                                                                    <rect key="frame" x="52.5" y="30.5" width="50" height="164.5"/>
                                                                 </imageView>
                                                             </subviews>
                                                         </stackView>
@@ -359,8 +359,8 @@
                         <viewLayoutGuide key="safeArea" id="7gX-Og-ned"/>
                         <color key="backgroundColor" red="0.66575556989999995" green="0.90390533210000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="7gX-Og-ned" firstAttribute="trailing" secondItem="CuH-E4-gyI" secondAttribute="trailing" constant="16" id="Lgk-rx-FHF"/>
-                            <constraint firstItem="CuH-E4-gyI" firstAttribute="leading" secondItem="7gX-Og-ned" secondAttribute="leading" constant="16" id="hwh-0F-1a2"/>
+                            <constraint firstItem="7gX-Og-ned" firstAttribute="trailing" secondItem="CuH-E4-gyI" secondAttribute="trailing" constant="5" id="Lgk-rx-FHF"/>
+                            <constraint firstItem="CuH-E4-gyI" firstAttribute="leading" secondItem="7gX-Og-ned" secondAttribute="leading" constant="5" id="hwh-0F-1a2"/>
                             <constraint firstItem="CuH-E4-gyI" firstAttribute="top" secondItem="7gX-Og-ned" secondAttribute="top" constant="16" id="lmv-i1-Hjc"/>
                             <constraint firstItem="7gX-Og-ned" firstAttribute="bottom" secondItem="CuH-E4-gyI" secondAttribute="bottom" constant="16" id="w37-ls-nbM"/>
                         </constraints>
