--- a/Oasis/Base.lproj/Main.storyboard
+++ b/Oasis/Base.lproj/Main.storyboard
@@ -707,7 +707,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="og1-rL-hvM">
-                                <rect key="frame" x="355" y="20" width="39" height="28"/>
+                                <rect key="frame" x="355" y="20" width="39" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Save"/>
                                 <connections>
@@ -719,17 +719,17 @@
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="4Ux-iJ-bjK" firstAttribute="trailing" secondItem="og1-rL-hvM" secondAttribute="trailing" constant="20" id="38k-B0-C0f"/>
                             <constraint firstItem="yKo-rO-1F6" firstAttribute="top" secondItem="heU-pH-w2N" secondAttribute="bottom" constant="20" id="9NT-aw-THg"/>
                             <constraint firstItem="heU-pH-w2N" firstAttribute="top" secondItem="4Ux-iJ-bjK" secondAttribute="top" constant="20" id="DhS-dI-00W"/>
+                            <constraint firstItem="4Ux-iJ-bjK" firstAttribute="trailing" secondItem="og1-rL-hvM" secondAttribute="trailing" constant="20" id="GzA-2n-6Sg"/>
                             <constraint firstItem="heU-pH-w2N" firstAttribute="leading" secondItem="4Ux-iJ-bjK" secondAttribute="leading" constant="20" id="KbS-vJ-UFS"/>
-                            <constraint firstItem="yKo-rO-1F6" firstAttribute="top" secondItem="og1-rL-hvM" secondAttribute="bottom" constant="20" id="Keo-vp-4l1"/>
                             <constraint firstItem="og1-rL-hvM" firstAttribute="top" secondItem="4Ux-iJ-bjK" secondAttribute="top" constant="20" id="NL9-Lq-CNz"/>
                             <constraint firstItem="4Ux-iJ-bjK" firstAttribute="bottom" secondItem="yKo-rO-1F6" secondAttribute="bottom" constant="60" id="NhJ-Uf-DYG"/>
                             <constraint firstItem="4Ux-iJ-bjK" firstAttribute="trailing" secondItem="yKo-rO-1F6" secondAttribute="trailing" constant="15" id="PKL-om-4oi"/>
                             <constraint firstItem="yKo-rO-1F6" firstAttribute="leading" secondItem="4Ux-iJ-bjK" secondAttribute="leading" constant="15" id="PbW-w7-zqB"/>
                             <constraint firstItem="ZYd-yY-Mnw" firstAttribute="top" secondItem="4Ux-iJ-bjK" secondAttribute="top" constant="60" id="jnd-9j-Zbr"/>
                             <constraint firstItem="ZYd-yY-Mnw" firstAttribute="centerX" secondItem="3GL-UF-VYp" secondAttribute="centerX" id="t8e-Pb-93F"/>
+                            <constraint firstItem="og1-rL-hvM" firstAttribute="leading" secondItem="heU-pH-w2N" secondAttribute="trailing" constant="307" id="y88-2m-c3y"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="BUg-9C-WQ5" appends="YES" id="SZK-Pl-Ifu"/>
@@ -811,7 +811,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e9R-Ky-3uD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4000.0000000000005" y="-58.258928571428569"/>
+            <point key="canvasLocation" x="-3397" y="95"/>
         </scene>
         <!--Settings-->
         <scene sceneID="pgl-Ln-VVH">
@@ -825,7 +825,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="tc2-Xb-8dS">
-                                <rect key="frame" x="117" y="358" width="180" height="180"/>
+                                <rect key="frame" x="117" y="383" width="180" height="130"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZy-4l-MJV">
                                         <rect key="frame" x="0.0" y="0.0" width="180" height="30"/>
@@ -872,22 +872,6 @@
                                             <segue destination="Ocq-93-sbk" kind="show" id="vIY-Z8-o7I"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FtK-bS-90Z">
-                                        <rect key="frame" x="0.0" y="150" width="180" height="30"/>
-                                        <color key="backgroundColor" red="0.3853648428" green="0.78487769500000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                                        <state key="normal" title="About Us">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="15"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <segue destination="WcT-oh-gHb" kind="show" id="un1-e7-1e6"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="dZy-4l-MJV" firstAttribute="leading" secondItem="tc2-Xb-8dS" secondAttribute="leading" id="4BT-O1-sSC"/>
@@ -896,11 +880,8 @@
                                     <constraint firstItem="dZy-4l-MJV" firstAttribute="top" secondItem="tc2-Xb-8dS" secondAttribute="top" id="JUc-cT-Yt2"/>
                                     <constraint firstAttribute="trailing" secondItem="qeK-Re-JDC" secondAttribute="trailing" id="KT2-Nu-Hrf"/>
                                     <constraint firstItem="qeK-Re-JDC" firstAttribute="leading" secondItem="tc2-Xb-8dS" secondAttribute="leading" id="XeH-9l-4ee"/>
-                                    <constraint firstAttribute="bottom" secondItem="FtK-bS-90Z" secondAttribute="bottom" id="gVW-vV-0Zq"/>
                                     <constraint firstAttribute="width" constant="180" id="lia-Di-AWS"/>
                                     <constraint firstAttribute="trailing" secondItem="Lcm-FO-7Ef" secondAttribute="trailing" id="u1o-hq-yKL"/>
-                                    <constraint firstAttribute="trailing" secondItem="FtK-bS-90Z" secondAttribute="trailing" id="uub-uK-Phl"/>
-                                    <constraint firstItem="FtK-bS-90Z" firstAttribute="leading" secondItem="tc2-Xb-8dS" secondAttribute="leading" id="wDs-02-UlB"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -921,43 +902,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WHd-Jb-O9s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2500" y="-180"/>
-        </scene>
-        <!--About Us-->
-        <scene sceneID="Cj0-rY-LAn">
-            <objects>
-                <viewController title="About Us" id="WcT-oh-gHb" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="0Jv-Ye-I3s">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DGP-sE-U2b">
-                                <rect key="frame" x="20" y="20" width="28" height="28"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="KF3-4m-blC"/>
-                                    <constraint firstAttribute="width" constant="28" id="h7s-zm-fAU"/>
-                                </constraints>
-                                <state key="normal" image="x-mark"/>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="About Us" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vw5-Zv-Xdv">
-                                <rect key="frame" x="156" y="91" width="103" height="25"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Symbol" family="Symbol" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="nWB-g8-XLx"/>
-                        <color key="backgroundColor" systemColor="systemTealColor"/>
-                        <constraints>
-                            <constraint firstItem="DGP-sE-U2b" firstAttribute="top" secondItem="nWB-g8-XLx" secondAttribute="top" constant="20" id="0TP-ns-fWS"/>
-                            <constraint firstItem="DGP-sE-U2b" firstAttribute="leading" secondItem="nWB-g8-XLx" secondAttribute="leading" constant="20" id="m7x-sg-Ed3"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="Kwe-vT-uRI"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hCd-z1-IhH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-3397" y="559"/>
         </scene>
     </scenes>
     <resources>
